rgw multisite: make host in zone_endpoints_list configurable
Also change endpoint to pull_endpoint

Signed-off-by: Ali Maredia <amaredia@redhat.com>

--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -503,6 +503,7 @@ dummy:
 #rgw_zone_user_display_name: "Zone User"
 #rgw_realm: milkyway # should be set by the user
 #rgw_multisite_proto: "http"
+#rgw_multisite_host: "{{ _radosgw_address if rgw_multisite_proto == 'http' else ansible_fqdn }}"
 #system_access_key: 6kWkikvapSnHyE22P7nO # should be re-created by the user
 #system_secret_key: MGecsMrWtKZgngOHZdrd6d3JxGO5CPWgT2lcnpSt # should be re-created by the user
 
