rgw_multisite: README-MULTISITE,validate, & testing changes
first round of changes from previous commits to
config files, README-MULTISITE.md, and testing
infrastructure

Signed-off-by: Ali Maredia <amaredia@redhat.com>

--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -499,10 +499,8 @@ rgw_zone: default
 #system_access_key: 6kWkikvapSnHyE22P7nO # should be re-created by the user
 #system_secret_key: MGecsMrWtKZgngOHZdrd6d3JxGO5CPWgT2lcnpSt # should be re-created by the user
 
-# Multi-site remote pull URL variables
-#rgw_pull_port: "{{ radosgw_frontend_port }}"
-#rgw_pull_proto: "http" # should be the same as rgw_multisite_proto for the master zone cluster
-#rgw_pullhost: localhost # rgw_pullhost only needs to be declared if there is a zone secondary.
+# Multi-site remote pull endpoint. This an endpoint made up of rgw_multisite_proto + rgw_multisite_host + + radosgw_frontend_port of a rgw in the master zone of the realm you'd like to pull from.
+#rgw_pull_endpoint: "http://hostname:8080"
 
 ###################
 # CONFIG OVERRIDE #
