--- a/roles/ceph-rgw/tasks/multisite/create_zone_user.yml
+++ b/roles/ceph-rgw/tasks/multisite/create_zone_user.yml
@@ -5,8 +5,8 @@
   loop: "{{ rgw_instances_all }}"
   run_once: true
   when:
-    - hostvars[item.host]['rgw_zonemaster'] | bool
-    - hostvars[item.host]['rgw_zonegroupmaster'] | bool
+    - item.rgw_zonemaster | bool
+    - item.rgw_zonegroupmaster | bool
 
 - name: create the zone user(s)
   radosgw_user:
