--- a/roles/ceph-rgw/tasks/pre_requisite.yml
+++ b/roles/ceph-rgw/tasks/pre_requisite.yml
@@ -1,20 +1,40 @@
 ---
-- name: create rgw keyrings
+- name: create rados gateway instance key
   ceph_key:
     name: "client.rgw.{{ ansible_facts['hostname'] }}.{{ item.instance_name }}"
-    cluster: "{{ cluster }}"
-    user: "client.bootstrap-rgw"
-    user_key: /var/lib/ceph/bootstrap-rgw/{{ cluster }}.keyring
-    dest: "/var/lib/ceph/radosgw/{{ cluster }}-rgw.{{ ansible_facts['hostname'] }}.{{ item.instance_name }}/keyring"
-    caps:
-      osd: 'allow rwx'
-      mon: 'allow rw'
-    import_key: False
-    owner: "ceph"
-    group: "ceph"
-    mode: "0600"
+    state: present
+    # The value below must be valid JSON starting with "{" to be automatically
+    # converted to a dict by Ansible
+    caps: >-
+      {% if rgw_create_pools -%}
+      {"mon": "allow r",
+       "osd": "{% for name in rgw_create_pools %}allow rwx pool={{ name }}{% if not loop.last %}, {% endif %}{% endfor %}"}
+      {% else -%}
+      {"osd": "allow rwx",
+       "mon": "allow rw"}
+      {% endif %}
   environment:
     CEPH_CONTAINER_IMAGE: "{{ ceph_docker_registry + '/' + ceph_docker_image + ':' + ceph_docker_image_tag if containerized_deployment else None }}"
     CEPH_CONTAINER_BINARY: "{{ container_binary }}"
-  with_items: "{{ rgw_instances }}"
+  loop: "{{ rgw_instances }}"
+  when: cephx | bool
+  delegate_to: '{{ groups[mon_group_name][0] }}'
+
+- name: get rados gateway keys from monitors
+  command: "{{ container_exec_cmd }} ceph --cluster {{ cluster }} auth get client.rgw.{{ ansible_facts['hostname'] }}.{{ item.instance_name }}"
+  register: _rgw_keys
+  loop: "{{ rgw_instances }}"
+  delegate_to: '{{ groups[mon_group_name][0] }}'
+  check_mode: false
+  changed_when: false
+  when: cephx | bool
+
+- name: put rados gateway keys
+  copy:
+    dest: /var/lib/ceph/radosgw/{{ cluster }}-rgw.{{ ansible_facts['hostname'] }}.{{ item.item.instance_name }}/keyring
+    content: "{{ item.stdout }}\n"
+    owner: "ceph"
+    group: "ceph"
+    mode: "0600"
+  loop: "{{ _rgw_keys.results }}"
   when: cephx | bool
