Support binding RGW to multiple interfaces
Allow a single RGW instance to be configured to bind to multiple
interfaces. The "rgw_address" variable can either be an IP address as a
string or a list of IP addresses.

Signed-off-by: Gaudenz Steinlin <gaudenz.steinlin@cloudscale.ch>

--- a/roles/ceph-dashboard/tasks/configure_dashboard.yml
+++ b/roles/ceph-dashboard/tasks/configure_dashboard.yml
@@ -252,7 +252,7 @@
       changed_when: false
 
     - name: set the rgw host
-      command: "{{ container_exec_cmd }} ceph --cluster {{ cluster }} dashboard set-rgw-api-host {{ hostvars[groups[rgw_group_name][0]]['rgw_instances'][0]['radosgw_address'] }}"
+      command: "{{ container_exec_cmd }} ceph --cluster {{ cluster }} dashboard set-rgw-api-host {{ hostvars[groups[rgw_group_name][0]]['rgw_instances'][0]['radosgw_address'] | first }}"
       changed_when: false
       delegate_to: "{{ groups[mon_group_name][0] }}"
 
