--- a/group_vars/rhcs.yml.sample
+++ b/group_vars/rhcs.yml.sample
@@ -503,7 +503,7 @@ ceph_iscsi_config_dev: false
 #rgw_zone_user_display_name: "Zone User"
 #rgw_realm: milkyway # should be set by the user
 #rgw_multisite_proto: "http"
-#rgw_multisite_host: "{{ _radosgw_address if rgw_multisite_proto == 'http' else ansible_fqdn }}"
+#rgw_multisite_host: "{{ _radosgw_address if (rgw_multisite_proto == 'http' || rgw_multisite == false) else ansible_fqdn }}"
 #system_access_key: 6kWkikvapSnHyE22P7nO # should be re-created by the user
 #system_secret_key: MGecsMrWtKZgngOHZdrd6d3JxGO5CPWgT2lcnpSt # should be re-created by the user
 
@@ -795,3 +795,4 @@ alertmanager_container_image: registry.redhat.io/openshift4/ose-prometheus-alert
 #container_exec_cmd:
 #docker: false
 #ceph_volume_debug: "{{ enable_ceph_volume_debug | ternary(1, 0)  }}"
+
