--- a/infrastructure-playbooks/rolling_update.yml
+++ b/infrastructure-playbooks/rolling_update.yml
@@ -371,7 +371,9 @@
   become: True
   tasks:
     - name: get osd numbers - non container
-      shell: "if [ -d /var/lib/ceph/osd ] ; then ls /var/lib/ceph/osd | sed 's/.*-//' ; fi"
+      shell: |
+        set -o pipefail;
+        if [ -d /var/lib/ceph/osd ] ; then ls /var/lib/ceph/osd | sed 's/.*-//' ; fi
       register: osd_ids
       changed_when: false
 
