--- a/infrastructure-playbooks/rolling_update.yml
+++ b/infrastructure-playbooks/rolling_update.yml
@@ -429,6 +429,7 @@
 
     - name: get num_pgs - non container
       command: "{{ container_exec_cmd_update_osd|default('') }} ceph --cluster {{ cluster }} pg stat --format json"
+      changed_when: false
       register: ceph_pgs
       delegate_to: "{{ groups[mon_group_name][0] }}"
 
@@ -471,6 +472,7 @@
     - name: get osd versions
       command: "{{ container_exec_cmd_update_osd|default('') }} ceph --cluster {{ cluster }} versions"
       register: ceph_versions
+      changed_when: false
 
     - name: set_fact ceph_versions_osd
       set_fact:
@@ -1019,6 +1021,7 @@
 
     - name: show ceph status
       command: "{{ container_exec_cmd_status|default('') }} ceph --cluster {{ cluster }} -s"
+      changed_when: false
       run_once: True
       delegate_to: "{{ groups[mon_group_name][0] }}"
 
@@ -1026,3 +1029,4 @@
       command: "{{ container_exec_cmd_status|default('') }} ceph --cluster {{ cluster }} versions"
       run_once: True
       delegate_to: "{{ groups[mon_group_name][0] }}"
+      changed_when: false
