--- a/infrastructure-playbooks/purge-cluster.yml
+++ b/infrastructure-playbooks/purge-cluster.yml
@@ -729,7 +729,9 @@
     listen: "remove data"
 
   - name: umount osd data partition
-    shell: umount {{ item }}
+    mount:
+      path: "{{ item }}"
+      state: unmounted
     with_items: "{{ mounted_osd.stdout_lines }}"
     listen: "remove data"
 
