--- a/infrastructure-playbooks/purge-container-cluster.yml
+++ b/infrastructure-playbooks/purge-container-cluster.yml
@@ -685,5 +685,5 @@
 
   - name: purge fetch directory for localhost
     file:
-      path: "{{ fetch_directory }}/"
+      path: "{{ fetch_directory | default('fetch/') }}/"
       state: absent
