--- a/infrastructure-playbooks/purge-cluster.yml
+++ b/infrastructure-playbooks/purge-cluster.yml
@@ -375,7 +375,7 @@
       delegate_to: localhost
 
   - name: remove data
-    shell: rm -rf /var/lib/ceph/*
+    shell: rm -rf /var/lib/ceph/*  # noqa 302
 
   tasks:
 
@@ -735,7 +735,7 @@
     listen: "remove data"
 
   - name: remove data
-    shell: rm -rf /var/lib/ceph/*
+    shell: rm -rf /var/lib/ceph/*  # noqa 302
     listen: "remove data"
 
   tasks:
@@ -838,7 +838,7 @@
       state: absent
 
   - name: clean apt
-    command: apt-get clean
+    command: apt-get clean  # noqa 303
     when: ansible_pkg_mgr == 'apt'
 
   - name: purge ceph repo file in /etc/yum.repos.d
