Redefine SSL variables for rgwloadbalancer
Allow user to pass the certificate in
haproxy_frontend_ssl_certificate_content and to store it in
haproxy_frontend_ssl_certificate_path.

Signed-off-by: Rafał Wądołowski <rwadolowski@cloudferro.com>

--- a/roles/ceph-rgw-loadbalancer/defaults/main.yml
+++ b/roles/ceph-rgw-loadbalancer/defaults/main.yml
@@ -8,6 +8,8 @@
 haproxy_frontend_port: 80
 haproxy_frontend_ssl_port: 443
 haproxy_frontend_ssl_certificate:
+haproxy_frontend_ssl_certificate_path: "{{ haproxy_frontend_ssl_certificate }}"
+haproxy_frontend_ssl_certificate_content:
 haproxy_ssl_dh_param: 4096
 haproxy_ssl_ciphers:
   - EECDH+AESGCM
