--- a/infrastructure-playbooks/cephadm-adopt.yml
+++ b/infrastructure-playbooks/cephadm-adopt.yml
@@ -326,11 +326,13 @@
         name: ceph-defaults
 
     - name: adopt mon daemon
-      command: "{{ cephadm_cmd }} adopt --cluster {{ cluster }} --skip-pull --style legacy --name mon.{{ ansible_hostname }} {{ '--skip-firewalld' if not configure_firewall | bool else '' }}"
-      args:
-        creates: '/var/lib/ceph/{{ fsid }}/mon.{{ ansible_hostname }}/unit.run'
-      environment:
-        CEPHADM_IMAGE: '{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}'
+      cephadm_adopt:
+        name: "mon.{{ ansible_hostname }}"
+        cluster: "{{ cluster }}"
+        image: "{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}"
+        docker: "{{ true if container_binary == 'docker' else false }}"
+        pull: false
+        firewalld: "{{ true if configure_firewall | bool else false }}"
 
     - name: reset failed ceph-mon systemd unit
       command: 'systemctl reset-failed ceph-mon@{{ ansible_hostname }}'  # noqa 303
@@ -371,11 +373,13 @@
         name: ceph-defaults
 
     - name: adopt mgr daemon
-      command: "{{ cephadm_cmd }} adopt --cluster {{ cluster }} --skip-pull --style legacy --name mgr.{{ ansible_hostname }} {{ '--skip-firewalld' if not configure_firewall | bool else '' }}"
-      args:
-        creates: '/var/lib/ceph/{{ fsid }}/mgr.{{ ansible_hostname }}/unit.run'
-      environment:
-        CEPHADM_IMAGE: '{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}'
+      cephadm_adopt:
+        name: "mgr.{{ ansible_hostname }}"
+        cluster: "{{ cluster }}"
+        image: "{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}"
+        docker: "{{ true if container_binary == 'docker' else false }}"
+        pull: false
+        firewalld: "{{ true if configure_firewall | bool else false }}"
 
     - name: reset failed ceph-mgr systemd unit
       command: 'systemctl reset-failed ceph-mgr@{{ ansible_hostname }}'  # noqa 303
@@ -456,12 +460,14 @@
       when: containerized_deployment | bool
 
     - name: adopt osd daemon
-      command: "{{ cephadm_cmd }} adopt --cluster {{ cluster }} --skip-pull --style legacy --name osd.{{ item }} {{ '--skip-firewalld' if not configure_firewall | bool else '' }}"
+      cephadm_adopt:
+        name: "osd.{{ item }}"
+        cluster: "{{ cluster }}"
+        image: "{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}"
+        docker: "{{ true if container_binary == 'docker' else false }}"
+        pull: false
+        firewalld: "{{ true if configure_firewall | bool else false }}"
       loop: '{{ (osd_list.stdout | from_json).keys() | list }}'
-      args:
-        creates: '/var/lib/ceph/{{ fsid }}/osd.{{ item }}/unit.run'
-      environment:
-        CEPHADM_IMAGE: '{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}'
 
     - name: remove ceph-osd systemd unit and ceph-osd-run.sh files
       file:
@@ -851,11 +857,13 @@
             state: link
 
         - name: adopt alertmanager daemon
-          command: "{{ cephadm_cmd }} adopt --cluster {{ cluster }} --skip-pull --style legacy --name alertmanager.{{ ansible_hostname }} {{ '--skip-firewalld' if not configure_firewall | bool else '' }}"
-          args:
-            creates: '/var/lib/ceph/{{ fsid }}/alertmanager.{{ ansible_hostname }}/unit.run'
-          environment:
-            CEPHADM_IMAGE: '{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}'
+          cephadm_adopt:
+            name: "alertmanager.{{ ansible_hostname }}"
+            cluster: "{{ cluster }}"
+            image: "{{ alertmanager_container_image }}"
+            docker: "{{ true if container_binary == 'docker' else false }}"
+            pull: false
+            firewalld: "{{ true if configure_firewall | bool else false }}"
 
         - name: remove alertmanager systemd unit file
           file:
@@ -911,11 +919,13 @@
             recurse: true
 
         - name: adopt prometheus daemon
-          command: "{{ cephadm_cmd }} adopt --cluster {{ cluster }} --skip-pull --style legacy --name prometheus.{{ ansible_hostname }} {{ '--skip-firewalld' if not configure_firewall | bool else '' }}"
-          args:
-            creates: '/var/lib/ceph/{{ fsid }}/prometheus.{{ ansible_hostname }}/unit.run'
-          environment:
-            CEPHADM_IMAGE: '{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}'
+          cephadm_adopt:
+            name: "prometheus.{{ ansible_hostname }}"
+            cluster: "{{ cluster }}"
+            image: "{{ prometheus_container_image }}"
+            docker: "{{ true if container_binary == 'docker' else false }}"
+            pull: false
+            firewalld: "{{ true if configure_firewall | bool else false }}"
 
         - name: remove prometheus systemd unit file
           file:
@@ -935,11 +945,13 @@
             enabled: false
 
         - name: adopt grafana daemon
-          command: "{{ cephadm_cmd }} adopt --cluster {{ cluster }} --skip-pull --style legacy --name grafana.{{ ansible_hostname }} {{ '--skip-firewalld' if not configure_firewall | bool else '' }}"
-          args:
-            creates: '/var/lib/ceph/{{ fsid }}/grafana.{{ ansible_hostname }}/unit.run'
-          environment:
-            CEPHADM_IMAGE: '{{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}'
+          cephadm_adopt:
+            name: "grafana.{{ ansible_hostname }}"
+            cluster: "{{ cluster }}"
+            image: "{{ grafana_container_image }}"
+            docker: "{{ true if container_binary == 'docker' else false }}"
+            pull: false
+            firewalld: "{{ true if configure_firewall | bool else false }}"
 
         - name: remove grafana systemd unit file
           file:
