--- a/site-container.yml.sample
+++ b/site-container.yml.sample
@@ -80,6 +80,7 @@
             start: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
 - hosts: mons
+  tags: mons
   become: True
   gather_facts: false
   any_errors_fatal: true
@@ -115,6 +116,7 @@
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
 - hosts: mgrs
+  tags: mgrs
   become: True
   gather_facts: false
   any_errors_fatal: true
@@ -153,6 +155,7 @@
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
 - hosts: osds
+  tags: osds
   become: True
   gather_facts: false
   any_errors_fatal: true
@@ -191,6 +194,7 @@
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
 - hosts: mdss
+  tags: mdss
   become: True
   gather_facts: false
   any_errors_fatal: true
@@ -229,6 +233,7 @@
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
 - hosts: rgws
+  tags: rgws
   become: True
   gather_facts: false
   any_errors_fatal: true
@@ -248,6 +253,13 @@
     - import_role:
         name: ceph-facts
       tags: ['ceph_update_config']
+    - name: multisite specific
+      when: rgw_multisite | bool
+      block:
+        - import_role:
+            name: ceph-validate
+        - import_role:
+            name: ceph-infra
     - import_role:
         name: ceph-handler
       tags: ['ceph_update_config']
@@ -267,6 +279,7 @@
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
 - hosts: clients
+  tags: clients
   become: True
   gather_facts: false
   any_errors_fatal: true
@@ -306,6 +319,7 @@
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
 - hosts: nfss
+  tags: nfss
   become: True
   gather_facts: false
   any_errors_fatal: true
@@ -344,6 +358,7 @@
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
 - hosts: rbdmirrors
+  tags: rbdmirrors
   become: True
   gather_facts: false
   any_errors_fatal: true
@@ -381,8 +396,8 @@
             status: "Complete"
             end: "{{ lookup('pipe', 'date +%Y%m%d%H%M%SZ') }}"
 
-- hosts:
-    - iscsigws
+- hosts: iscsigws
+  tags: iscsigws
   gather_facts: false
   any_errors_fatal: true
   become: True
