--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -357,6 +357,12 @@ osd_auto_discovery_exclude: "dm-*|loop*|md*|rbd*"
 # type.
 filestore_xattr_use_omap: null
 
+# define any ec profiles here if needed
+# example:
+# ec_profiles:
+#   - {'name': 'my_ec_profile1', 'k': 2, 'm': 4, 'stripe_unit': 8192}
+#   - {'name': 'my_ec_profile2', 'k': 4, 'm': 8, 'crush_root': 'HDD', 'crush_device_class': 'ssd'}
+
 ## MDS options
 #
 mds_max_mds: 1
