osd: support removing ec_profiles
Take `state` as a parameter to be passed to the module call so it is
possible to remove an ec profile.

Signed-off-by: Guillaume Abrioux <gabrioux@redhat.com>

--- a/roles/ceph-defaults/defaults/main.yml
+++ b/roles/ceph-defaults/defaults/main.yml
@@ -362,6 +362,7 @@ filestore_xattr_use_omap: null
 # ec_profiles:
 #   - {'name': 'my_ec_profile1', 'k': 2, 'm': 4, 'stripe_unit': 8192}
 #   - {'name': 'my_ec_profile2', 'k': 4, 'm': 8, 'crush_root': 'HDD', 'crush_device_class': 'ssd'}
+#   - {'name': 'foobar', 'state': 'absent'}
 
 ## MDS options
 #
