--- a/roles/ceph-osd/tasks/main.yml
+++ b/roles/ceph-osd/tasks/main.yml
@@ -108,7 +108,7 @@
   ceph_ec_profile:
     cluster: "{{ cluster }}"
     name: "{{ item.name }}"
-    state: present
+    state: "{{ item.state | default(omit) }}"
     stripe_unit: "{{ item.stripe_unit | default(omit) }}"
     k: "{{ item.k }}"
     m: "{{ item.m }}"
