--- a/group_vars/all.yml.sample
+++ b/group_vars/all.yml.sample
@@ -370,6 +370,7 @@ dummy:
 # ec_profiles:
 #   - {'name': 'my_ec_profile1', 'k': 2, 'm': 4, 'stripe_unit': 8192}
 #   - {'name': 'my_ec_profile2', 'k': 4, 'm': 8, 'crush_root': 'HDD', 'crush_device_class': 'ssd'}
+#   - {'name': 'foobar', 'state': 'absent'}
 
 ## MDS options
 #
