--- a/tests/functional/rgw_multisite.yml
+++ b/tests/functional/rgw_multisite.yml
@@ -40,7 +40,7 @@
         s3cmd --no-ssl --access_key={{ item.system_access_key }} --secret_key={{ item.system_secret_key }} --host={{ item.radosgw_address }}:{{ item.radosgw_frontend_port }} --host-bucket={{ item.radosgw_address }}:{{ item.radosgw_frontend_port }} put /tmp/testinfra-{{ item.rgw_realm }}.img s3://testinfra-{{ item.rgw_realm }};
       with_items: "{{ rgw_instances_host }}"
       when:
-        - rgw_zonemaster | bool
+        - item.rgw_zonemaster | default(rgw_zonemaster) | bool
         - not containerized_deployment | bool
 
     - name: get info from replicated file - containerized deployment
@@ -64,5 +64,5 @@
       delay: 1
       until: result is succeeded
       when:
-        - not rgw_zonemaster | bool
+        - not item.rgw_zonemaster | default(rgw_zonemaster) | bool
         - not containerized_deployment | bool
