library: add ceph_disk module
This adds ceph_disk ansible module for replacing the command module
usage with the ceph-disk command.

Signed-off-by: Dimitri Savineau <dsavinea@redhat.com>

--- a/roles/ceph-osd/tasks/main.yml
+++ b/roles/ceph-osd/tasks/main.yml
@@ -91,9 +91,7 @@
 
 - name: include_tasks activate_osds.yml
   include_tasks: activate_osds.yml
-  when:
-    - not containerized_deployment
-    - osd_scenario != 'lvm'
+  when: osd_scenario != 'lvm'
 
 - name: include_tasks start_osds.yml
   include_tasks: start_osds.yml
