--- a/roles/ceph-osd/tasks/scenarios/non-collocated.yml
+++ b/roles/ceph-osd/tasks/scenarios/non-collocated.yml
@@ -1,128 +1,59 @@
 ---
-# use shell rather than docker module
-# to ensure osd disk prepare finishes before
-# starting the next task
-- name: prepare ceph "{{ osd_objectstore }}" containerized osd disk(s) non-collocated
-  shell: |
-    docker run --net=host \
-    --ulimit nofile=1024:4096 \
-    --pid=host \
-    --privileged=true \
-    --name=ceph-osd-prepare-{{ ansible_hostname }}-{{ item.1 | regex_replace('/dev/', '') }} \
-    -v /etc/ceph:/etc/ceph:z \
-    -v /var/lib/ceph/:/var/lib/ceph/:z \
-    -v /dev:/dev \
-    -v /etc/localtime:/etc/localtime:ro \
-    -e DEBUG=verbose \
-    -e CLUSTER={{ cluster }} \
-    -e CEPH_DAEMON=OSD_CEPH_DISK_PREPARE \
-    -e OSD_DEVICE={{ item.1 }} \
-    -e OSD_JOURNAL={{ item.2 }} \
-    {{ docker_env_args }} \
-    {{ ceph_osd_docker_prepare_env }} \
-    {{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}
-  with_together:
-    - "{{ parted_results.results | default([]) }}"
-    - "{{ devices }}"
-    - "{{ dedicated_devices }}"
-  when:
-    - containerized_deployment
-    - osd_objectstore == 'filestore'
-    - item.0.partitions|length == 0
-
-- name: prepare ceph "{{ osd_objectstore }}" containerized osd disk(s) non-collocated with a dedicated device for db
-  shell: |
-    docker run --net=host \
-    --ulimit nofile=1024:4096 \
-    --pid=host \
-    --privileged=true \
-    --name=ceph-osd-prepare-{{ ansible_hostname }}-{{ item.1 | regex_replace('/dev/', '') }} \
-    -v /etc/ceph:/etc/ceph:z \
-    -v /var/lib/ceph/:/var/lib/ceph/:z \
-    -v /dev:/dev \
-    -v /etc/localtime:/etc/localtime:ro \
-    -e DEBUG=verbose \
-    -e CLUSTER={{ cluster }} \
-    -e CEPH_DAEMON=OSD_CEPH_DISK_PREPARE \
-    -e OSD_DEVICE={{ item.1 }} \
-    -e OSD_BLUESTORE_BLOCK_DB={{ item.2 }} \
-    {{ docker_env_args }} \
-    {{ ceph_osd_docker_prepare_env }} \
-    {{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}
-  with_together:
-    - "{{ parted_results.results | default([]) }}"
-    - "{{ devices }}"
-    - "{{ dedicated_devices }}"
-  when:
-    - containerized_deployment
-    - osd_objectstore == 'bluestore'
-    - item.0.partitions|length == 0
-    - bluestore_wal_devices|length == 0
-
-- name: prepare ceph "{{ osd_objectstore }}" containerized osd disk(s) non-collocated with a dedicated device for db and wal
-  shell: |
-    docker run --net=host \
-    --ulimit nofile=1024:4096 \
-    --pid=host \
-    --privileged=true \
-    --name=ceph-osd-prepare-{{ ansible_hostname }}-{{ item.1 | regex_replace('/dev/', '') }} \
-    -v /etc/ceph:/etc/ceph:z \
-    -v /var/lib/ceph/:/var/lib/ceph/:z \
-    -v /dev:/dev \
-    -v /etc/localtime:/etc/localtime:ro \
-    -e DEBUG=verbose \
-    -e CLUSTER={{ cluster }} \
-    -e CEPH_DAEMON=OSD_CEPH_DISK_PREPARE \
-    -e OSD_DEVICE={{ item.1 }} \
-    -e OSD_BLUESTORE_BLOCK_DB={{ item.2 }} \
-    -e OSD_BLUESTORE_BLOCK_WAL={{ item.3 }} \
-    {{ docker_env_args }} \
-    {{ ceph_osd_docker_prepare_env }} \
-    {{ ceph_docker_registry }}/{{ ceph_docker_image }}:{{ ceph_docker_image_tag }}
-  with_together:
-    - "{{ parted_results.results | default([]) }}"
-    - "{{ devices }}"
-    - "{{ dedicated_devices }}"
-    - "{{ bluestore_wal_devices }}"
-  when:
-    - containerized_deployment
-    - osd_objectstore == 'bluestore'
-    - item.0.partitions|length == 0
-    - bluestore_wal_devices|length > 0
-
-- name: prepare ceph "{{ osd_objectstore }}" non-containerized osd disk(s) non-collocated
-  command: "ceph-disk prepare {{ ceph_disk_cli_options }} {{ item.1 }} {{ item.2 }}"
+- name: prepare ceph "{{ osd_objectstore }}" osd disk(s) non-collocated
+  ceph_disk:
+    cluster: "{{ cluster }}"
+    objectstore: filestore
+    data: "{{ item.2 }}"
+    journal: "{{ item.1 }}"
+    dmcrypt: "{{ dmcrypt }}"
+    action: prepare
   with_together:
     - "{{ parted_results.results | default([]) }}"
     - "{{ devices }}"
     - "{{ dedicated_devices }}"
   changed_when: false
+  environment:
+    CEPH_CONTAINER_IMAGE: "{{ ceph_docker_registry + '/' + ceph_docker_image + ':' + ceph_docker_image_tag if containerized_deployment | bool else None }}"
   when:
     - osd_objectstore == 'filestore'
-    - not containerized_deployment
     - item.0.partitions|length == 0
 
-- name: manually prepare ceph "{{ osd_objectstore }}" non-containerized osd disk(s) with a dedicated device for db
-  command: "ceph-disk prepare {{ ceph_disk_cli_options }} --block.db {{ item.1 }} {{ item.2 }}"
+- name: manually prepare ceph "{{ osd_objectstore }}" osd disk(s) with a dedicated device for db
+  ceph_disk:
+    cluster: "{{ cluster }}"
+    objectstore: bluestore
+    data: "{{ item.2 }}"
+    db: "{{ item.1 }}"
+    dmcrypt: "{{ dmcrypt }}"
+    action: prepare
   with_together:
     - "{{ parted_results.results | default([]) }}"
     - "{{ dedicated_devices }}"
     - "{{ devices | unique }}"
+  environment:
+    CEPH_CONTAINER_IMAGE: "{{ ceph_docker_registry + '/' + ceph_docker_image + ':' + ceph_docker_image_tag if containerized_deployment | bool else None }}"
   when:
     - osd_objectstore == 'bluestore'
-    - not containerized_deployment
     - item.0.partitions|length == 0
     - bluestore_wal_devices|length == 0
 
-- name: manually prepare ceph "{{ osd_objectstore }}" non-containerized osd disk(s) with a dedicated device for db and wal
-  command: "ceph-disk prepare {{ ceph_disk_cli_options }} --block.db {{ item.1 }} --block.wal {{ item.2 }} {{ item.3 }}"
+- name: manually prepare ceph "{{ osd_objectstore }}" osd disk(s) with a dedicated device for db and wal
+  ceph_disk:
+    cluster: "{{ cluster }}"
+    objectstore: bluestore
+    data: "{{ item.3 }}"
+    db: "{{ item.1 }}"
+    wal: "{{ item.2 }}"
+    dmcrypt: "{{ dmcrypt }}"
+    action: prepare
   with_together:
     - "{{ parted_results.results | default([]) }}"
     - "{{ dedicated_devices }}"
     - "{{ bluestore_wal_devices }}"
     - "{{ devices | unique }}"
+  environment:
+    CEPH_CONTAINER_IMAGE: "{{ ceph_docker_registry + '/' + ceph_docker_image + ':' + ceph_docker_image_tag if containerized_deployment | bool else None }}"
   when:
     - osd_objectstore == 'bluestore'
-    - not containerized_deployment
     - item.0.partitions|length == 0
     - bluestore_wal_devices|length > 0
